--- a/mnist-classifier.ipynb
+++ b/mnist-classifier.ipynb
@@ -116,7 +116,7 @@
     "import os\n",
     "import wget\n",
     "filename = 'tf-model.zip'\n",
-    "url = 'MY GITHUB LINK HERE/tf-model.zip?raw=true'\n",
+    "url = 'https://github.com/FarrandTom/wml-tf-mnist-classifier/blob/master/tf-model.zip?raw=true'\n",
     "\n",
     "# NOTE: If you are re-running this code block again, having changed the model or adding your own custom model\n",
     "# be careful to ensure that your new model is the one which is truly downloaded.\n",
