--- a/mnist-classifier.ipynb
+++ b/mnist-classifier.ipynb
@@ -154,7 +154,23 @@
     "\n",
     "Next, we shall define the `client` object. This will create a persistent connection to the Watson Machine Learning service we have provisioned- allowing us to define our model.\n",
     "\n",
-    "Replace the `***` with the Watson Machine Learning credentials which we grabbed earlier."
+    "Replace the `***` with the Watson Machine Learning credentials which we grabbed earlier. The credentials should be of the form:\n",
+    "\n",
+    "`\n",
+    "{\n",
+    "  \"apikey\": \"fvQhnasISmiCfBY_B5s_-BoUXCcNhaTZvkoZp4FEHsKj\",\n",
+    "  \"iam_apikey_description\": \"Auto generated apikey during resource-key operation for Instance - crn:v1:bluemix:public:pm-20:eu-gb:a/ce8cf6a45e150b00765de8a3331a8f7a:b38e1378-d26a-49b5-abd1-8c8400c718da::\",\n",
+    "  \"iam_apikey_name\": \"auto-generated-apikey-8acbeb08-6d14-40e4-9965-e9ced6ef2282\",\n",
+    "  \"iam_role_crn\": \"crn:v1:bluemix:public:iam::::serviceRole:Writer\",\n",
+    "  \"iam_serviceid_crn\": \"crn:v1:bluemix:public:iam-identity::a/ce8cf6a45e150b00765de8a3331a8f7a::serviceid:ServiceId-d44c04a6-4d41-4852-b4ff-7d102b5b75af\",\n",
+    "  \"instance_id\": \"b38e1378-d26a-49b5-abd1-8c8400c718da\",\n",
+    "  \"password\": \"f5a65dc6-83f8-49a6-b157-1340b943054d\",\n",
+    "  \"url\": \"https://eu-gb.ml.cloud.ibm.com\",\n",
+    "  \"username\": \"8acbeb08-6d14-40e4-9965-e9ced6ef2282\"\n",
+    "}\n",
+    "`\n",
+    "\n",
+    "Simply take the `url, username, password,` and `instance_id` fields from your set of credentials and paste them in below. "
    ]
   },
   {
@@ -231,6 +247,32 @@
     "\n",
     "Replace the `***` with the credentials corresponding to those we grabbed from the Cloud Object Storage bucket. \n",
     "\n",
+    "Ensure that you correctly assign the `'bucket'` name to the training and results bucket respectively. \n",
+    "\n",
+    "Your credentials should be of the form: \n",
+    "\n",
+    "`\n",
+    "{\n",
+    "  \"apikey\": \"KCgab9avEvG447WaBxrm6oQmsifkAXVZ3NzIhzzKK-Ax\",\n",
+    "  \"cos_hmac_keys\": {\n",
+    "    \"access_key_id\": \"c8353d95c0ba4585be6bcf794d3f232a\",\n",
+    "    \"secret_access_key\": \"9026c43e4aaa1180c588bf4ba3d31ea981571d12032652a8\"\n",
+    "  },\n",
+    "  \"endpoints\": \"https://control.cloud-object-storage.cloud.ibm.com/v2/endpoints\",\n",
+    "  \"iam_apikey_description\": \"Auto generated apikey during resource-key operation for Instance - crn:v1:bluemix:public:cloud-object-storage:global:a/ce8cf6a45e150b00765de8a3331a8f7a:e8381a84-e2a2-430d-9883-0d40376d35a5::\",\n",
+    "  \"iam_apikey_name\": \"auto-generated-apikey-c8353d95-c0ba-4585-be6b-cf794d3f232a\",\n",
+    "  \"iam_role_crn\": \"crn:v1:bluemix:public:iam::::serviceRole:Writer\",\n",
+    "  \"iam_serviceid_crn\": \"crn:v1:bluemix:public:iam-identity::a/ce8cf6a45e150b00765de8a3331a8f7a::serviceid:ServiceId-649ee6ac-78eb-4437-ad8a-85b0a4dc62af\",\n",
+    "  \"resource_instance_id\": \"crn:v1:bluemix:public:cloud-object-storage:global:a/ce8cf6a45e150b00765de8a3331a8f7a:e8381a84-e2a2-430d-9883-0d40376d35a5::\"\n",
+    "}\n",
+    "`\n",
+    "\n",
+    "While the `endpoint_url` should be of the form (this is likely to change so be aware that yours could be slightly different): \n",
+    "\n",
+    "`s3.eu-gb.cloud-object-storage.appdomain.cloud`\n",
+    "\n",
+    "Simply match the corresponding values to those specified below i.e. the `access_key_id` should be the same for both. In this case, the only difference between the `TRAINING_DATA_REFERENCE` and the `TRAINING_RESULTS_REFERENCE` credentials is the name of the bucket (you could mix and match different buckets if you wanted to, in which case the credentials between the two would differ). \n",
+    "\n",
     "**Note:** The `client.training` object does not specifiy any constraints on how your data should be laid out and setup. This is done in the model code which you define."
    ]
   },
@@ -241,7 +283,7 @@
    "outputs": [],
    "source": [
     "metadata = {\n",
-    "client.training.ConfigurationMetaNames.NAME         : \"python-client-tutorial_training-run\",\n",
+    "client.training.ConfigurationMetaNames.NAME         : \"mnist-classifier-training-run\",\n",
     "client.training.ConfigurationMetaNames.AUTHOR_EMAIL : \"***\",\n",
     "client.training.ConfigurationMetaNames.TRAINING_DATA_REFERENCE : {\n",
     "   \"connection\" : { \n",
@@ -319,7 +361,7 @@
    "source": [
     "#### Results\n",
     "\n",
-    "Results alongside all other output from the model run, will be dropped into the results bucket of your Cloud Object Storage instance."
+    "Results, alongside all other output from the model run, will be dropped into the results bucket of your Cloud Object Storage instance."
    ]
   },
   {
@@ -395,7 +437,6 @@
    "outputs": [],
    "source": [
     "filename = 'tf-mnist-test-payload.json'\n",
-    "'MY GIT HUB BELOW'\n",
     "url = 'https://raw.githubusercontent.com/pmservice/wml-sample-models/master/tensorflow/hand-written-digit-recognition/test-data/tf-mnist-test-payload.json'\n",
     "if not os.path.isfile( filename ): wget.download( url )"
    ]
@@ -446,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.5",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +501,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.7.0"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
