Adding endpoint url information

--- a/mnist-classifier.ipynb
+++ b/mnist-classifier.ipynb
@@ -271,6 +271,8 @@
     "\n",
     "`s3.eu-gb.cloud-object-storage.appdomain.cloud`\n",
     "\n",
+    "**Note:** Make sure to use the endpoint_url you obtained from the designated \"Endpoints\" tab in the Cloud Object Storage UI during step 4. Do not use the `endpoint` URL contained in the service credentials as represented above. \n",
+    "\n",
     "Simply match the corresponding values to those specified below i.e. the `access_key_id` should be the same for both. In this case, the only difference between the `TRAINING_DATA_REFERENCE` and the `TRAINING_RESULTS_REFERENCE` credentials is the name of the bucket (you could mix and match different buckets if you wanted to, in which case the credentials between the two would differ). \n",
     "\n",
     "**Note:** The `client.training` object does not specifiy any constraints on how your data should be laid out and setup. This is done in the model code which you define."
